--- a/package.json
+++ b/package.json
@@ -47,25 +47,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom",
-    "toolbox": "react-toolbox-themr"
+    "test": "node scripts/test.js --env=jsdom"
   },
-  "reactToolbox": {
-    "include": [
-      "BUTTON"
-    ],
-    "customProperties": {
-      "animation-duration": "0.3s",
-      "color-accent": "var(--palette-pink-a200)",
-      "color-accent-dark": "var(--palette-pink-700)",
-      "color-primary-contrast": "var(--color-dark-contrast)",
-      "color-accent-contrast": "var(--color-dark-contrast)"
-    },
-    "output": "src/assets/react-toolbox"
-  },
-  "devDependencies": {
-    "react-toolbox-themr": "^1.0.2"
-  },
+  "devDependencies": {},
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}"
